NEWS - OpenPrinting CUPS Filters v1.9.0 - 2016-06-09
----------------------------------------------------

CHANGES IN V1.9.1

	- cups-browsed: From cups-browsed.service removed the unneeded
	  "Wants=cups.service" as we have "Requires=cups.service"
	  (Debian bug #827455, #827457).
	- foomatic-rip: Updated man page for removed page logging
	  facility.
	- pdftops: Also added Dell to the list of manufacturers whose
	  printers need Poppler's PostScript to work around their
	  PostScript interpreter bugs (Debian bug #827040).

CHANGES IN V1.9.0

	- foomatic-rip: Removed page logging via insertion of PostScript code.
	  This works only with Ghostscript and PostScript input and even
	  then it can break things or simply not work. We do the page logging
	  for foomatic-rip in pdftopdf now, which is more universal and more
	  reliable.
	- sys5ippprinter: Added page logging (to /var/log/cups/page_log)
	  functionality.
	- pdftopdf: Added functionality for logging pages in the
	  /var/log/cups/page_log file. Logging can also be forced or
	  surpressed via command line (page-logging=on/off/auto) and
	  page logging is also done for filters which should do but
	  actually do not do: foomatic-rip, gstopxl, hpps (CUPS issue #4798,
	  Ubuntu bug #1585380).
	- pdftopdf: Whitespace and indentation clean-up.
	- README: Removed the documentation of the old Poppler-based pdftopdf
	  filter which is not included any more.
	- cups-browsed: Do not schedule failed operations for later repetition
	  during shutdown.
	- cups-browsed: Added support for debug logging into a file (usually
	  /var/log/cups/cups-browsed_log, to be activated via "-l" or
	  "--logfile" option or via "DebugLogging file" option in
	  cups-browsed.conf.
	- cups-browesd: Consistent use of debug_printf() in the LDAP support.
	- cups-browsed: Added "Requires=cups-service" to the
	  cups-browsed.service file, so that systemd keeps CUPS running while