@@ -3,6 +3,10 @@ NEWS - OpenPrinting CUPS Filters v1.9.0 - 2016-06-09
 
 CHANGES IN V1.9.1
 
+	- libcupsfilters: Fixed crash of pdftoraster when the color
+	  space is an RGB space (3 colors) with 1 bit color
+	  depth. Here we need to add one bit to the pixels (to get 4
+	  bits per pixel) to align the pixels with the bytes.
 	- cups-browsed: From cups-browsed.service removed the unneeded
 	  "Wants=cups.service" as we have "Requires=cups.service"
 	  (Debian bug #827455, #827457).
